--- a/SBL.ipynb
+++ b/SBL.ipynb
@@ -8,7 +8,7 @@
     "version 0.2\n",
     "\n",
     "WD egenskap [Property:P3217](https://www.wikidata.org/wiki/Property:P3217) \n",
-    "* den här [notebook](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)   \n",
+    "* den här [notebooken](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)   \n",
     "  * SBL person artiklar som saknar [sv:Wikipedia artikel](https://w.wiki/c5f) < 150\n",
     "* [SBL vs SKBL female articles](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)  \n",
     "\n",
@@ -16,7 +16,7 @@
     "* personartiklar\n",
     "* släktartiklar\n",
     "\n",
-    "Det saknas idag ett API så nedanstående är ett försök att webscrapa deras data och sedan försöka hitta en struktur. Målsättningen är att ha personerna som har en SBL personartikel representerade i Wikidata. Kul vore att även ha släktartiklarna kopplade till Wikidata... är inte säkert hur bra strukturen är för släkter/ätter/familjer i WD och sedan behövs det matchas en hel del. En person kan även omnäms i en slöäktartikel och bör du i WIkidata ha \"beskriven av källa\" kopplad till dessa artiklar vilket är ett mycket stort jobb om Riksarkivet inte går över till att leverera [länkade data]()...     \n",
+    "Det saknas idag ett API så nedanstående är ett försök att webscrapa deras data och sedan försöka hitta en struktur. Målsättningen är att ha personerna som har en SBL personartikel representerade i Wikidata. Kul vore att även ha släktartiklarna kopplade till Wikidata... är inte säkert hur bra strukturen är för släkter/ätter/familjer i WD och sedan behövs det matchas en hel del. En person kan även omnäms i en slöäktartikel och bör du i WIkidata ha \"beskriven av källa\" kopplad till dessa artiklar vilket är ett mycket stort jobb om Riksarkivet inte går över till att leverera [länkade data](https://sv.wikipedia.org/wiki/L%C3%A4nkade_data)...     \n",
     "\n",
     "**Mina gissningar** \n",
     "1. sida med född/död är en person\n",
