--- a/SBL.ipynb
+++ b/SBL.ipynb
@@ -5,25 +5,31 @@
    "metadata": {},
    "source": [
     "## Riksarkivet SBL  - Wikidata ett försök att synka dom\n",
-    "version 0.3\n",
+    "version 0.4\n",
     "\n",
     "WD egenskap [Property:P3217](https://www.wikidata.org/wiki/Property:P3217) \n",
     "* den här [notebooken](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)   \n",
-    "  * SBL person artiklar som saknar [sv:Wikipedia artikel](https://w.wiki/c5f) < 150\n",
+    "  * SBL personartiklar som saknar [sv:Wikipedia artikel](https://w.wiki/c5f) < 150\n",
     "* [SBL vs SKBL female articles](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)  \n",
     "\n",
     "SBL har idag\n",
     "* personartiklar\n",
     "* släktartiklar\n",
+    "  * en person i en släktartikel kan ha en sida som bara pekar till släktartikeln (med text ej länk)\n",
     "\n",
-    "Det saknas idag ett API så nedanstående är ett försök att webscrapa deras data och sedan försöka hitta en struktur. Målsättningen är att ha personerna som har en SBL personartikel representerade i Wikidata. Kul vore att även ha släktartiklarna kopplade till Wikidata... är inte säkert hur bra strukturen är för släkter/ätter/familjer i WD och sedan behövs det matchas en hel del. En person kan även omnämnas i en släktartikel och bör då i Wikidata ha \"beskriven av källa\" kopplad till dessa artiklar (exempel Gunnar Mossing [Q5994570#P1343](https://www.wikidata.org/wiki/Q5994570#P1343) som finns i artikel SBL [\"Morssing, släkt\"](https://sok.riksarkivet.se/sbl/Presentation.aspx?id=9512)) vilket är ett mycket stort jobb om Riksarkivet inte går över till att leverera [länkade data](https://sv.wikipedia.org/wiki/L%C3%A4nkade_data)...     \n",
+    "Det saknas idag från Riksarkivet ett API så nedanstående är ett försök att webscrapa deras data och sedan försöka hitta en struktur. \n",
+    "\n",
+    "Målsättningen är att ha personerna som har en SBL personartikel representerade i Wikidata. Kul vore att även ha släktartiklarna kopplade till Wikidata... är inte säkert hur bra strukturen är för släkter/ätter/familjer i WD och sedan behövs det matchas en hel del. En person kan även omnämnas i en släktartikel och bör då i Wikidata ha \"beskriven av källa\" kopplad till dessa artiklar (exempel Gunnar Mossing [Q5994570#P1343](https://www.wikidata.org/wiki/Q5994570#P1343) som finns i artikel SBL [\"Morssing, släkt\"](https://sok.riksarkivet.se/sbl/Presentation.aspx?id=9512)) vilket är ett mycket stort jobb om Riksarkivet inte går över till att leverera [länkade data](https://sv.wikipedia.org/wiki/L%C3%A4nkade_data)...     \n",
     "\n",
     "**Mina gissningar** \n",
     "1. sida med född/död är en person\n",
     "2. sida med titel släkt är en släktartikel\n",
     "3. sida med född/död men för kort kan vara en referens till en släktartikel\n",
     "4. släkt artikel kan ha \"[ätt](https://sok.riksarkivet.se/sbl/Search.aspx?t=0)\" i titeln men det kan visst även person artiklar ha\n",
-    "5. ....\n"
+    "5. ....\n",
+    "\n",
+    "### jmf SKBL med SBL \n",
+    "med ett mera komplett Wikidata kan vi nu jämföra [Svenskt Kvinnobiografiskt lexikon - SKBL](https://www.skbl.se/sv/om-skbl) med [Riksarkivet](https://sok.riksarkivet.se/sbl/OmSBL.aspx) då det göller urval av kvinnor, antal kvinnor, hur dom levererar, API vs. inte API, skillnaden att ha enbart svenska artiklar som SBL med att även ha [engelska artiklar som SKBL](https://www.skbl.se/en/about-skbl)"
    ]
   },
   {
