--- a/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
@@ -635,7 +635,9 @@
     "* dont have structured data\n",
     "* no understanding of [Linked data](https://vimeo.com/36752317)\n",
     "* we have before manually and doing webscrabing populated [Wikidata P3217](https://www.wikidata.org/wiki/Property_talk:P3217) now I guess we wait on SBL for delivering data as data see question asked [236883](https://phabricator.wikimedia.org/T236883) Oct 30 2019, 11:03 AM - no official answer so far and The Swedish National Archives has no helpdesk system were you get an unique helpdesk number ([some action was promised aug 2018 by Rolf Källman](https://twitter.com/salgo60/status/1030269242296414208?s=20) nothing heard)\n",
-    "  * latest  "
+    "\n",
+    "### Wikidata <-> SBL updated\n",
+    "We did a try getting structure from webscrabed data see [Jupyter Notebook]()"
    ]
   },
   {
