--- a/SBL.ipynb
+++ b/SBL.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Riksarkivet SBL  - Wikidata ett försök att synka dom\n",
-    "version 0.4\n",
+    "version 0.41\n",
     "\n",
     "WD egenskap [Property:P3217](https://www.wikidata.org/wiki/Property:P3217) \n",
     "* den här [notebooken](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)   \n",
@@ -29,7 +29,8 @@
     "5. ....\n",
     "\n",
     "### jmf SKBL med SBL \n",
-    "med ett mera komplett Wikidata kan vi nu jämföra [Svenskt Kvinnobiografiskt lexikon - SKBL](https://www.skbl.se/sv/om-skbl) med [Riksarkivet](https://sok.riksarkivet.se/sbl/OmSBL.aspx) då det göller urval av kvinnor, antal kvinnor, hur dom levererar, API vs. inte API, skillnaden att ha enbart svenska artiklar som SBL med att även ha [engelska artiklar som SKBL](https://www.skbl.se/en/about-skbl)"
+    "med ett mera komplett Wikidata kan vi nu jämföra [Svenskt Kvinnobiografiskt lexikon - SKBL](https://www.skbl.se/sv/om-skbl) med [Riksarkivet](https://sok.riksarkivet.se/sbl/OmSBL.aspx) då det gäller urval av kvinnor, antal kvinnor, hur dom levererar, API vs. inte API, skillnaden att ha enbart svenska artiklar som SBL med att även ha [engelska artiklar som SKBL](https://www.skbl.se/en/about-skbl)\n",
+    "* [Notebook]()"
    ]
   },
   {
