--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon part 1\n",
-    "version 1.3.4.34\n",
+    "version 1.3.5\n",
     "\n",
     "\n",
-    "* Denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
-    "  * [del 2](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%202.ipynb) med sökfrågor etc.\n",
-    "  * [del 3](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb) hämtar data\n",
-    "* Video om detta [svenska](https://www.youtube.com/watch?v=_LP48Yf6vgI) / [engelska](https://www.youtube.com/watch?v=wolyLu0WVsA)  \n",
+    "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
+    "  * [part 2](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%202.ipynb) med sökfrågor etc.\n",
+    "  * [part 3](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb) hämtar data\n",
+    "* Video about this [swedish](https://www.youtube.com/watch?v=_LP48Yf6vgI) / [engelska](https://www.youtube.com/watch?v=wolyLu0WVsA)  \n",
     "* Wikidata - [An introduction to Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE)\n",
     "  * SKBL WIkidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
     "  "
@@ -22,12 +22,9 @@
    "metadata": {},
    "source": [
     "# Check diff SKBL Wikidata \n",
-    "ett försök att hålla Wikidata / SKBL i fas \n",
+    "a try to synchWikidata / SKBL property P4963 \n",
     "* [KARP APIet](https://spraakbanken.gu.se/verktyg/karp/webb-api)\n",
-    "* se tidigare försök att ha ISNI i synk [T219700](https://phabricator.wikimedia.org/T219700), GITHUB [salgo60/SKBLWikidata](https://github.com/salgo60/SKBLWikidata) \n",
-    "  * mar 2019 kommentar om [platser i SKBL](https://phabricator.wikimedia.org/T218782)  \n",
-    "  \n",
-    "Viss osäkerhet hur en bra API fråga skall se ut returnerar alla personer i SKBL"
+    "  "
    ]
   },
   {
@@ -39,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-09-11 19:49:13.382534\n"
+      "Last run:  2020-09-15 23:20:37.800853\n"
      ]
     }
    ],
@@ -89,9 +86,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1556 entries, 0 to 1555\n",
+      "RangeIndex: 1560 entries, 0 to 1559\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1556 non-null object\n",
+      "skblid    1560 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 12.3+ KB\n"
      ]
@@ -130,11 +127,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1427 entries, 550 to 832\n",
+      "Int64Index: 1431 entries, 552 to 834\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1427 non-null object\n",
+      "skblid    1431 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 22.3+ KB\n"
+      "memory usage: 22.4+ KB\n"
      ]
     }
    ],
@@ -171,9 +168,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1488 entries, 0 to 1487\n",
+      "RangeIndex: 1494 entries, 0 to 1493\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1488 non-null object\n",
+      "skblid    1494 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.8+ KB\n"
      ]
@@ -230,9 +227,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1488 entries, 0 to 1487\n",
+      "RangeIndex: 1494 entries, 0 to 1493\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1488 non-null object\n",
+      "skblid    1494 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.8+ KB\n"
      ]
@@ -275,9 +272,9 @@
     {
      "data": {
       "text/plain": [
-       "both          1425\n",
+       "both          1431\n",
        "left_only       63\n",
-       "right_only       2\n",
+       "right_only       0\n",
        "Name: _merge, dtype: int64"
       ]
      },
@@ -340,24 +337,14 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1488</th>\n",
-       "      <td>ElinPersson</td>\n",
-       "      <td>right_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1489</th>\n",
-       "      <td>SigneSalen</td>\n",
-       "      <td>right_only</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           skblid      _merge\n",
-       "1488  ElinPersson  right_only\n",
-       "1489   SigneSalen  right_only"
+       "Empty DataFrame\n",
+       "Columns: [skblid, _merge]\n",
+       "Index: []"
       ]
      },
      "execution_count": 16,
@@ -379,12 +366,12 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2 entries, 1488 to 1489\n",
+      "Int64Index: 0 entries\n",
       "Data columns (total 2 columns):\n",
-      "skblid    2 non-null object\n",
-      "_merge    2 non-null category\n",
+      "skblid    0 non-null object\n",
+      "_merge    0 non-null category\n",
       "dtypes: category(1), object(1)\n",
-      "memory usage: 138.0+ bytes\n"
+      "memory usage: 104.0+ bytes\n"
      ]
     }
    ],
@@ -401,82 +388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2  antal poster\n"
-     ]
-    }
-   ],
-   "source": [
-    "import csv  \n",
-    "jsonURL = \"https://skbl.se/sv/artikel/\"\n",
-    "listNewItems =[]\n",
-    "for index,row in SKBLnew.iterrows():\n",
-    "    url = jsonURL + row[\"skblid\"] + \".json\"\n",
-    "    r = http.request('GET', url) \n",
-    "    data = json.loads(r.data.decode('utf-8'))  \n",
-    "    \n",
-    "    new_item = dict()\n",
-    "    try:\n",
-    "        publishedDate = data['publication_date'],        \n",
-    "    except:\n",
-    "        publishedDate =\"\"\n",
-    "    new_item['publishedDate'] = publishedDate[0]\n",
-    "    try:\n",
-    "        birthdate = data['lifespan']['from']['date']['date'],\n",
-    "    except:\n",
-    "        birtdate =\"\"\n",
-    "    new_item['birthdate'] = birthdate[0]\n",
-    "    try:\n",
-    "        deathdate = data['lifespan']['to']['date']['date']\n",
-    "    except:\n",
-    "        deathdate=\"\"\n",
-    "    new_item['deathdate'] = deathdate\n",
-    "    try:\n",
-    "        birthparish = data['lifespan']['from']['place']['parish']\n",
-    "    except:\n",
-    "        birthparish = \"\"        \n",
-    "    new_item['birthparish'] = birthparish\n",
-    "    try:\n",
-    "        deathparish = data['lifespan']['to']['place']['parish']\n",
-    "    except:\n",
-    "        deathparish = \"\"\n",
-    "    new_item['deathparish'] = deathparish\n",
-    "    try:\n",
-    "        ISNI = data['id']['id']\n",
-    "    except:\n",
-    "        ISNI = \"\"\n",
-    "    new_item['ISNI'] = ISNI\n",
-    "    new_item['SKBL'] = row[\"skblid\"]\n",
-    "    new_item['index'] = index\n",
-    "    new_item['skbl_status'] = data['skbl_status']\n",
-    "    new_item['firstname'] = data['name'].get('firstname')\n",
-    "    new_item['lastname'] = data['name'].get('lastname')\n",
-    "    new_item['subtitle'] = data['subtitle']\n",
-    "    listNewItems.append(new_item)\n",
-    "print (len(listNewItems) ,\" antal poster\")\n",
-    "if len(listNewItems) > 0:\n",
-    "    keys = listNewItems[0].keys()\n",
-    "    with open(\"SKBL_newfile.csv\", \"w\", newline='') as SKBLfile:\n",
-    "        dict_writer = csv.DictWriter(SKBLfile, keys)\n",
-    "        dict_writer.writeheader()\n",
-    "        dict_writer.writerows(listNewItems)\n",
-    "\n",
-    "    dfSKBLcsv = pd.read_csv(\"SKBL_newfile.csv\", sep=\",\")   \n",
-    "    dfSKBLcsv\n",
-    "else:\n",
-    "    print (\"Ingen fil skapas inga nya poster\") \n",
-    "            \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ended:  2020-09-11 19:49:17.088913\n"
+      "Ended:  2020-09-15 23:20:39.644471\n"
      ]
     }
    ],
@@ -484,20 +396,6 @@
     "end = datetime.now()\n",
     "print(\"Ended: \", end)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
