--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon part 1\n",
-    "version 1.3.5\n",
+    "version 1.3.4.34\n",
     "\n",
     "\n",
-    "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
-    "  * [part 2](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%202.ipynb) med sökfrågor etc.\n",
-    "  * [part 3](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb) hämtar data\n",
-    "* Video about this [swedish](https://www.youtube.com/watch?v=_LP48Yf6vgI) / [engelska](https://www.youtube.com/watch?v=wolyLu0WVsA)  \n",
+    "* Denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
+    "  * [del 2](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%202.ipynb) med sökfrågor etc.\n",
+    "  * [del 3](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb) hämtar data\n",
+    "* Video om detta [svenska](https://www.youtube.com/watch?v=_LP48Yf6vgI) / [engelska](https://www.youtube.com/watch?v=wolyLu0WVsA)  \n",
     "* Wikidata - [An introduction to Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE)\n",
     "  * SKBL WIkidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
     "  "
@@ -22,9 +22,12 @@
    "metadata": {},
    "source": [
     "# Check diff SKBL Wikidata \n",
-    "a try to synchWikidata / SKBL property P4963 \n",
+    "ett försök att hålla Wikidata / SKBL i fas \n",
     "* [KARP APIet](https://spraakbanken.gu.se/verktyg/karp/webb-api)\n",
-    "  "
+    "* se tidigare försök att ha ISNI i synk [T219700](https://phabricator.wikimedia.org/T219700), GITHUB [salgo60/SKBLWikidata](https://github.com/salgo60/SKBLWikidata) \n",
+    "  * mar 2019 kommentar om [platser i SKBL](https://phabricator.wikimedia.org/T218782)  \n",
+    "  \n",
+    "Viss osäkerhet hur en bra API fråga skall se ut returnerar alla personer i SKBL"
    ]
   },
   {
@@ -36,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-09-15 23:20:37.800853\n"
+      "Last run:  2020-09-16 10:54:22.380845\n"
      ]
     }
    ],
@@ -86,9 +89,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1560 entries, 0 to 1559\n",
+      "RangeIndex: 1563 entries, 0 to 1562\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1560 non-null object\n",
+      "skblid    1563 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 12.3+ KB\n"
      ]
@@ -127,9 +130,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1431 entries, 552 to 834\n",
+      "Int64Index: 1434 entries, 553 to 836\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1431 non-null object\n",
+      "skblid    1434 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 22.4+ KB\n"
      ]
@@ -274,7 +277,7 @@
       "text/plain": [
        "both          1431\n",
        "left_only       63\n",
-       "right_only       0\n",
+       "right_only       3\n",
        "Name: _merge, dtype: int64"
       ]
      },
@@ -337,14 +340,30 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1494</th>\n",
+       "      <td>GretaHammarsten</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1495</th>\n",
+       "      <td>LisbethRenner</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1496</th>\n",
+       "      <td>WendelaLovisaUlrikaAnderssonFalck</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [skblid, _merge]\n",
-       "Index: []"
+       "                                 skblid      _merge\n",
+       "1494                    GretaHammarsten  right_only\n",
+       "1495                      LisbethRenner  right_only\n",
+       "1496  WendelaLovisaUlrikaAnderssonFalck  right_only"
       ]
      },
      "execution_count": 16,
@@ -366,12 +385,12 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 0 entries\n",
+      "Int64Index: 3 entries, 1494 to 1496\n",
       "Data columns (total 2 columns):\n",
-      "skblid    0 non-null object\n",
-      "_merge    0 non-null category\n",
+      "skblid    3 non-null object\n",
+      "_merge    3 non-null category\n",
       "dtypes: category(1), object(1)\n",
-      "memory usage: 104.0+ bytes\n"
+      "memory usage: 155.0+ bytes\n"
      ]
     }
    ],
@@ -388,7 +407,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-09-15 23:20:39.644471\n"
+      "3  antal poster\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv  \n",
+    "jsonURL = \"https://skbl.se/sv/artikel/\"\n",
+    "listNewItems =[]\n",
+    "for index,row in SKBLnew.iterrows():\n",
+    "    url = jsonURL + row[\"skblid\"] + \".json\"\n",
+    "    r = http.request('GET', url) \n",
+    "    data = json.loads(r.data.decode('utf-8'))  \n",
+    "    \n",
+    "    new_item = dict()\n",
+    "    try:\n",
+    "        publishedDate = data['publication_date'],        \n",
+    "    except:\n",
+    "        publishedDate =\"\"\n",
+    "    new_item['publishedDate'] = publishedDate[0]\n",
+    "    try:\n",
+    "        birthdate = data['lifespan']['from']['date']['date'],\n",
+    "    except:\n",
+    "        birtdate =\"\"\n",
+    "    new_item['birthdate'] = birthdate[0]\n",
+    "    try:\n",
+    "        deathdate = data['lifespan']['to']['date']['date']\n",
+    "    except:\n",
+    "        deathdate=\"\"\n",
+    "    new_item['deathdate'] = deathdate\n",
+    "    try:\n",
+    "        birthparish = data['lifespan']['from']['place']['parish']\n",
+    "    except:\n",
+    "        birthparish = \"\"        \n",
+    "    new_item['birthparish'] = birthparish\n",
+    "    try:\n",
+    "        deathparish = data['lifespan']['to']['place']['parish']\n",
+    "    except:\n",
+    "        deathparish = \"\"\n",
+    "    new_item['deathparish'] = deathparish\n",
+    "    try:\n",
+    "        ISNI = data['id']['id']\n",
+    "    except:\n",
+    "        ISNI = \"\"\n",
+    "    new_item['ISNI'] = ISNI\n",
+    "    new_item['SKBL'] = row[\"skblid\"]\n",
+    "    new_item['index'] = index\n",
+    "    new_item['skbl_status'] = data['skbl_status']\n",
+    "    new_item['firstname'] = data['name'].get('firstname')\n",
+    "    new_item['lastname'] = data['name'].get('lastname')\n",
+    "    new_item['subtitle'] = data['subtitle']\n",
+    "    listNewItems.append(new_item)\n",
+    "print (len(listNewItems) ,\" antal poster\")\n",
+    "if len(listNewItems) > 0:\n",
+    "    keys = listNewItems[0].keys()\n",
+    "    with open(\"SKBL_newfile.csv\", \"w\", newline='') as SKBLfile:\n",
+    "        dict_writer = csv.DictWriter(SKBLfile, keys)\n",
+    "        dict_writer.writeheader()\n",
+    "        dict_writer.writerows(listNewItems)\n",
+    "\n",
+    "    dfSKBLcsv = pd.read_csv(\"SKBL_newfile.csv\", sep=\",\")   \n",
+    "    dfSKBLcsv\n",
+    "else:\n",
+    "    print (\"Ingen fil skapas inga nya poster\") \n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ended:  2020-09-16 10:54:25.349777\n"
      ]
     }
    ],
