--- a/SBL.ipynb
+++ b/SBL.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Riksarkivet SBL  - Wikidata ett försök att synka dom\n",
-    "version 0.43\n",
+    "version 0.44\n",
     "\n",
     "WD egenskap [Property:P3217](https://www.wikidata.org/wiki/Property:P3217) \n",
     "* den här [notebooken](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)   \n",
@@ -396,6 +396,17 @@
    ],
    "source": [
     "dfPerson.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Släktartiklar  \n",
+    "Nedan lite gissning att en släktartikel har ordet släkt i titeln. \n",
+    "\n",
+    "* se också [webscarping Adelsvapen](https://gist.github.com/salgo60/31e0c4bf6f075c373fb5bbfb6cc807c6)\n",
+    "* csv lista skapad nedan på [GIST](https://gist.github.com/salgo60/31e0c4bf6f075c373fb5bbfb6cc807c6#gistcomment-3457126) "
    ]
   },
   {
@@ -13533,7 +13544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -13984,14 +13995,14 @@
       "11563 | Kleen, af Kleen, släkter | 1975-1977\n",
       "11575 | Kleman, släkter | 1975-1977\n",
       "11580 | Klemming, släkter | 1975-1977\n",
-      "11587 | Klercker, af, släkter | 1975-1977\n",
-      "11596 | Klinckowström, släkter | 1975-1977\n"
+      "11587 | Klercker, af, släkter | 1975-1977\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "11596 | Klinckowström, släkter | 1975-1977\n",
       "11604 | Klingenstierna, släkter | 1975-1977\n",
       "11610 | Klingspor, släkter | 1975-1977\n",
       "11620 | Klingstedt, släkter | 1975-1977\n",
@@ -14439,13 +14450,7 @@
       "14454 | Frese, släkt | 1964-1966\n",
       "14457 | Frestadius, släkt | 1964-1966\n",
       "14468 | Friberger, släkt | 1964-1966\n",
-      "14470 | Frick, släkt | 1964-1966\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "14470 | Frick, släkt | 1964-1966\n",
       "14478 | Fries, släkt (Elias-släkten) | 1964-1966\n",
       "14479 | Fries, släkt från Närke | 1964-1966\n",
       "14480 | Fries, släkt från Skåne | 1964-1966\n",
@@ -14458,7 +14463,13 @@
       "14508 | Frisendahl, släkt | 1964-1966\n",
       "14514 | Frosterus, släkt | 1964-1966\n",
       "14517 | Frumerie, släkt | 1964-1966\n",
-      "14520 | Frykholm, släkt | 1964-1966\n",
+      "14520 | Frykholm, släkt | 1964-1966\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "14526 | Fryxell, släkt | 1964-1966\n",
       "14537 | Fröberg, släkter | 1964-1966\n",
       "14538 | Fröberg, släkt från Stockholm | 1964-1966\n",
@@ -14966,7 +14977,13 @@
       "17648 | Dress, släkt | 1945\n",
       "17657 | Drufva, släkt | 1945\n",
       "17660 | Drummond, släkt | 1945\n",
-      "17662 | Dryander, släkt | 1945\n",
+      "17662 | Dryander, släkt | 1945\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "17663 | Dryander, släkt | 1945\n",
       "17670 | Dubb, släkt | 1945\n",
       "17675 | Dublar (Dubblare, Dobblare, Dobblar, Dobler), släkt | 1945\n",
@@ -14986,13 +15003,7 @@
       "17727 | Duwall, släkt | 1945\n",
       "17735 | Dybeck, släkt | 1945\n",
       "17737 | Düben, Düben von, släkt | 1945\n",
-      "17749 | Dücker, släkt | 1945\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "17749 | Dücker, släkt | 1945\n",
       "17759 | Düring, von, släkt | 1945\n",
       "17764 | Dyrssen, släkt | 1945\n",
       "17773 | Döbeln, von, släkt | 1945\n",
@@ -15194,10 +15205,17 @@
     }
    ],
    "source": [
-    "#Need a workaround as to_csv dont work ?!?!?\n",
+    "#Need a workaround as pandas to_csv dont work ?!?!?\n",
     "for  index,row in WDSlakt.iterrows():\n",
     "#    print(row[\"SBLnr\"],row[\"titel\"],row[\"Year\"],row[\"url\"])    \n",
-    "    print(row[\"SBLnr\"],\"|\",row[\"titel\"],\"|\",row[\"Year\"])"
+    "    print(row[\"SBLnr\"],\"|\",row[\"titel\"],\"|\",row[\"Year\"])  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List produced also on [GIST](https://gist.github.com/salgo60/31e0c4bf6f075c373fb5bbfb6cc807c6#gistcomment-3457126) "
    ]
   },
   {
