--- a/SBL.ipynb
+++ b/SBL.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Riksarkivet SBL  - Wikidata ett försök att synka dom\n",
-    "version 0.44\n",
+    "version 0.45\n",
     "\n",
     "WD egenskap [Property:P3217](https://www.wikidata.org/wiki/Property:P3217) \n",
     "* den här [notebooken](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)   \n",
@@ -15,7 +15,7 @@
     "SBL har idag\n",
     "* personartiklar\n",
     "* släktartiklar\n",
-    "  * en person i en släktartikel kan ha en sida som bara pekar till släktartikeln (med text ej länk)\n",
+    "  * en person i en släktartikel kan ha en sida som bara pekar till släktartikeln (med text ej alltid länk)\n",
     "\n",
     "Det saknas idag från Riksarkivet ett API så nedanstående är ett försök att webscrapa deras data och sedan försöka hitta en struktur. \n",
     "\n",
