--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon part 1\n",
-    "version 1.3.4.34\n",
-    "\n",
+    "version 1.3.5\n",
+    "checks for new records in SKBL\n",
     "\n",
     "* Denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "  * [del 2](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%202.ipynb) med sökfrågor etc.\n",
-    "  * [del 3](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb) hämtar data\n",
+    "  * [del 3](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb) jmf SBL och SKBL och även SKBL <-> Wikidata\n",
     "* Video om detta [svenska](https://www.youtube.com/watch?v=_LP48Yf6vgI) / [engelska](https://www.youtube.com/watch?v=wolyLu0WVsA)  \n",
     "* Wikidata - [An introduction to Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE)\n",
     "  * SKBL WIkidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-09-16 10:54:22.380845\n"
+      "Last run:  2020-09-17 15:44:51.708251\n"
      ]
     }
    ],
@@ -52,7 +52,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1499  antal poster\n"
+     ]
+    }
+   ],
    "source": [
     "import urllib3, json\n",
     "import pandas as pd \n",
@@ -60,28 +68,80 @@
     "pd.set_option(\"display.max.columns\", None)\n",
     "pd.set_option('display.max_rows', None)\n",
     "\n",
-    "\n",
-    "dftot = pd.DataFrame()\n",
-    " \n",
-    "url = \"https://ws.spraakbanken.gu.se/ws/karp/v5/minientry?q=extended%7C%7Cand%7Cnamn%7Cexists&mode=skbllinks&show=name%2Curl&sort=sorteringsnamn.sort%2Csorteringsnamn.init%2Ctilltalsnamn.sort&size=10000&resource=skbl\"\n",
+    "  \n",
+    "#Ny bättre URL    \n",
+    "url = \"https://ws.spraakbanken.gu.se/ws/karp/v5/query?mode=skbl&q=extended%7C%7Cand%7Cskblstatus%7Cequals%7Cok&size=10000\"\n",
     "r = http.request('GET', url) \n",
     "data = json.loads(r.data.decode('utf-8')) \n",
     "#print(type(data))\n",
-    "#print(r.info())\n",
+    "#print(r.info())  \n",
+    "\n",
     "listSKBL = []\n",
     "i = 0 \n",
     "for row in (data[\"hits\"][\"hits\"]):\n",
     "    #print (row[\"_source\"][\"url\"])\n",
-    "    listSKBL.append(row[\"_source\"][\"url\"])\n",
+    "    new_item = dict()\n",
+    "    new_item['skblid'] = row[\"_source\"][\"url\"]\n",
+    "   \n",
+    "    try:\n",
+    "        publishedDate = row[\"_source\"]['publication_date']        \n",
+    "    except:\n",
+    "        publishedDate =\"\"\n",
+    "    new_item['publishedDate'] = publishedDate\n",
+    "    try:\n",
+    "        article_author_firstname = row[\"_source\"][\"article_author\"][0]['firstname']\n",
+    "    except:\n",
+    "        article_author_firstname =\"\"\n",
+    "    new_item['article_author_firstname'] = article_author_firstname\n",
+    "    try:\n",
+    "        article_author_lastname = row[\"_source\"][\"article_author\"][0]['lastname']\n",
+    "    except:\n",
+    "        article_author_lastname =\"\"\n",
+    "    new_item['article_author_lastname'] = article_author_lastname\n",
+    "    try:\n",
+    "        subtitle_sv = row[\"_source\"]['subtitle']\n",
+    "    except:\n",
+    "        subtitle_sv =\"\"\n",
+    "    new_item['subtitle_sv'] = subtitle_sv\n",
+    "    try:\n",
+    "        name_lastname = row[\"_source\"]['name']['lastname']\n",
+    "    except:\n",
+    "        name_lastname = \"\"\n",
+    "    new_item['name_lastname'] = name_lastname\n",
+    "    try:\n",
+    "        name_firstname = row[\"_source\"]['name']['firstname']\n",
+    "    except:\n",
+    "        name_firstname = \"\"\n",
+    "    new_item['name_firstname'] = name_firstname\n",
+    "    listSKBL.append(new_item)\n",
     "    i = i + 1 \n",
     "    #print (i)\n",
-    "SKBLtot = pd.DataFrame(listSKBL,\n",
-    "                  columns=['skblid'])\n"
+    "print (len(listSKBL) ,\" antal poster\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#listSKBL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SKBLtot = pd.DataFrame(listSKBL,\n",
+    "                  columns=['skblid','publishedDate','article_author_firstname','article_author_lastname',\n",
+    "                          'subtitle_sv','name_lastname','name_firstname'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,11 +149,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1563 entries, 0 to 1562\n",
-      "Data columns (total 1 columns):\n",
-      "skblid    1563 non-null object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 12.3+ KB\n"
+      "RangeIndex: 1499 entries, 0 to 1498\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                    Non-Null Count  Dtype \n",
+      "---  ------                    --------------  ----- \n",
+      " 0   skblid                    1499 non-null   object\n",
+      " 1   publishedDate             1499 non-null   object\n",
+      " 2   article_author_firstname  1499 non-null   object\n",
+      " 3   article_author_lastname   1499 non-null   object\n",
+      " 4   subtitle_sv               1499 non-null   object\n",
+      " 5   name_lastname             1499 non-null   object\n",
+      " 6   name_firstname            1499 non-null   object\n",
+      "dtypes: object(7)\n",
+      "memory usage: 82.1+ KB\n"
      ]
     }
    ],
@@ -103,45 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#SKBLtot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#SKBLtot.sort_index(inplace=True) \n",
-    "SKBLtot.sort_values(['skblid'], ascending=[1],inplace=True) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1434 entries, 553 to 836\n",
-      "Data columns (total 1 columns):\n",
-      "skblid    1434 non-null object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 22.4+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The API gives us some duplicates \n",
-    "SKBLtot.drop_duplicates(subset =\"skblid\", keep = False, inplace = True)\n",
-    "SKBLtot.info() "
    ]
   },
   {
@@ -150,8 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SKBLtot = SKBLtot.reset_index(drop=True)  \n",
-    "#SKBLtot"
+    "#SKBLtot.sort_index(inplace=True) \n",
+    "SKBLtot.sort_values(['skblid'], ascending=[1],inplace=True) "
    ]
   },
   {
@@ -171,9 +205,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1494 entries, 0 to 1493\n",
+      "RangeIndex: 1499 entries, 0 to 1498\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1494 non-null object\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   skblid  1499 non-null   object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.8+ KB\n"
      ]
@@ -230,9 +266,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1494 entries, 0 to 1493\n",
+      "RangeIndex: 1499 entries, 0 to 1498\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1494 non-null object\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   skblid  1499 non-null   object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.8+ KB\n"
      ]
@@ -275,9 +313,9 @@
     {
      "data": {
       "text/plain": [
-       "both          1431\n",
-       "left_only       63\n",
-       "right_only       3\n",
+       "both          1499\n",
+       "right_only       0\n",
+       "left_only        0\n",
        "Name: _merge, dtype: int64"
       ]
      },
@@ -336,34 +374,24 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>skblid</th>\n",
+       "      <th>publishedDate</th>\n",
+       "      <th>article_author_firstname</th>\n",
+       "      <th>article_author_lastname</th>\n",
+       "      <th>subtitle_sv</th>\n",
+       "      <th>name_lastname</th>\n",
+       "      <th>name_firstname</th>\n",
        "      <th>_merge</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1494</th>\n",
-       "      <td>GretaHammarsten</td>\n",
-       "      <td>right_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1495</th>\n",
-       "      <td>LisbethRenner</td>\n",
-       "      <td>right_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1496</th>\n",
-       "      <td>WendelaLovisaUlrikaAnderssonFalck</td>\n",
-       "      <td>right_only</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 skblid      _merge\n",
-       "1494                    GretaHammarsten  right_only\n",
-       "1495                      LisbethRenner  right_only\n",
-       "1496  WendelaLovisaUlrikaAnderssonFalck  right_only"
+       "Empty DataFrame\n",
+       "Columns: [skblid, publishedDate, article_author_firstname, article_author_lastname, subtitle_sv, name_lastname, name_firstname, _merge]\n",
+       "Index: []"
       ]
      },
      "execution_count": 16,
@@ -385,12 +413,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 3 entries, 1494 to 1496\n",
-      "Data columns (total 2 columns):\n",
-      "skblid    3 non-null object\n",
-      "_merge    3 non-null category\n",
-      "dtypes: category(1), object(1)\n",
-      "memory usage: 155.0+ bytes\n"
+      "Int64Index: 0 entries\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                    Non-Null Count  Dtype   \n",
+      "---  ------                    --------------  -----   \n",
+      " 0   skblid                    0 non-null      object  \n",
+      " 1   publishedDate             0 non-null      object  \n",
+      " 2   article_author_firstname  0 non-null      object  \n",
+      " 3   article_author_lastname   0 non-null      object  \n",
+      " 4   subtitle_sv               0 non-null      object  \n",
+      " 5   name_lastname             0 non-null      object  \n",
+      " 6   name_firstname            0 non-null      object  \n",
+      " 7   _merge                    0 non-null      category\n",
+      "dtypes: category(1), object(7)\n",
+      "memory usage: 104.0+ bytes\n"
      ]
     }
    ],
@@ -407,7 +443,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3  antal poster\n"
+      "0  antal poster\n",
+      "Ingen fil skapas inga nya poster\n"
      ]
     }
    ],
@@ -482,7 +519,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-09-16 10:54:25.349777\n"
+      "Ended:  2020-09-17 15:45:00.594331\n"
      ]
     }
    ],
