--- a/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
@@ -8,6 +8,7 @@
     "    version part 3 - 2.03  \n",
     "  \n",
     "  * SKBL see https://skbl.se/en  \n",
+    "    * example JSON [GretaGarbo](https://skbl.se/en/article/GretaGarbo.json)\n",
     "  \n",
     "  \n",
     "  * get statistics SKBL and compare with SBL\n",
