Update Svenskt Kvinnobiografiskt lexikon part 3.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon - SKBL part 3\n",
-    "    version part 3 - 2.03  \n",
+    "    version part 3 - 2.1  \n",
     "  \n",
     "  * SKBL see https://skbl.se/en  \n",
     "    * example JSON [GretaGarbo](https://skbl.se/en/article/GretaGarbo.json)\n",
     "  \n",
-    "  \n",
-    "  * get statistics SKBL and compare with SBL\n",
+    "  This notebook\n",
+    "  * gets statistics about SKBL and compare with The Swedish National archives SBL biographies [about SBL](https://sok.riksarkivet.se/sbl/Start.aspx?lang=en)\n",
     "  * check if SKBL has new articles created not in Wikidata\n",
     "\n",
     "* Links \n",
