--- a/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Webscrape  \n",
+    "## Webscrape kulturpersoner.uppsalakyrkogardar\n",
     "* SPARQL https://w.wiki/PgP\n",
     "* https://kulturpersoner.uppsalakyrkogardar.se/galleri/"
    ]
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "      <th>60</th>\n",
        "      <td>Q99484369</td>\n",
        "      <td>Henrik Wilhelm Söderman</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/en/henrik-wilhelm-soderman/</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/e...</td>\n",
        "      <td>enhenrik-wilhelm-soderman</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Wikidata_only</td>\n",
@@ -501,7 +501,7 @@
        "      <th>71</th>\n",
        "      <td>Q99484881</td>\n",
        "      <td>Johan Fredrik Carlsson</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/en/johan-fredrik-carlsson/</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/e...</td>\n",
        "      <td>enjohan-fredrik-carlsson</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Wikidata_only</td>\n",
@@ -510,7 +510,7 @@
        "      <th>111</th>\n",
        "      <td>Q99485357</td>\n",
        "      <td>Rune Hammarling</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/en/rune-hammarling/</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/e...</td>\n",
        "      <td>enrune-hammarling</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Wikidata_only</td>\n",
@@ -578,7 +578,7 @@
        "[8 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "4          Rune Hammarling          https://kulturpersoner.uppsalakyrkogardar.se/rune-hammarling"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
