--- a/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
@@ -5,8 +5,13 @@
    "metadata": {},
    "source": [
     "## Webscrape kulturpersoner.uppsalakyrkogardar\n",
-    "* SPARQL https://w.wiki/PgP\n",
-    "* https://kulturpersoner.uppsalakyrkogardar.se/galleri/"
+    "version 0.1\n",
+    "\n",
+    "checks uppsalakyrkogardar and compare with Wikidata. \n",
+    "\n",
+    "* This [notebook](https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner.uppsalakyrkogardar.ipynb)\n",
+    "* Wikidata SPARQL https://w.wiki/PgP\n",
+    "* Webpage to check https://kulturpersoner.uppsalakyrkogardar.se/galleri/"
    ]
   },
   {
@@ -438,9 +443,8 @@
     {
      "data": {
       "text/plain": [
-       "both                 124\n",
-       "Kulturgravar_only      5\n",
-       "Wikidata_only          3\n",
+       "both                 127\n",
+       "Kulturgravar_only      3\n",
        "Name: Kulturgravar_Wikidata, dtype: int64"
       ]
      },
@@ -489,33 +493,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>Q99484369</td>\n",
-       "      <td>Henrik Wilhelm Söderman</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/e...</td>\n",
-       "      <td>enhenrik-wilhelm-soderman</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Wikidata_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>Q99484881</td>\n",
-       "      <td>Johan Fredrik Carlsson</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/e...</td>\n",
-       "      <td>enjohan-fredrik-carlsson</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Wikidata_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>Q99485357</td>\n",
-       "      <td>Rune Hammarling</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/e...</td>\n",
-       "      <td>enrune-hammarling</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Wikidata_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>127</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -529,8 +506,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>henrik-wilhelm-soderman</td>\n",
-       "      <td>Henrik Wilhelm Söderman</td>\n",
+       "      <td>herman-baumbach</td>\n",
+       "      <td>Herman Baumbach</td>\n",
        "      <td>Kulturgravar_only</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -538,26 +515,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>herman-baumbach</td>\n",
-       "      <td>Herman Baumbach</td>\n",
-       "      <td>Kulturgravar_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>johan-fredrik-carlsson</td>\n",
        "      <td>Johan Fredrik Carlsson</td>\n",
-       "      <td>Kulturgravar_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>rune-hammarling</td>\n",
-       "      <td>Rune Hammarling</td>\n",
        "      <td>Kulturgravar_only</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -565,17 +524,12 @@
        "</div>"
       ],
       "text/plain": [
-       "           qid  ... Kulturgravar_Wikidata\n",
-       "60   Q99484369  ...         Wikidata_only\n",
-       "71   Q99484881  ...         Wikidata_only\n",
-       "111  Q99485357  ...         Wikidata_only\n",
-       "127        NaN  ...     Kulturgravar_only\n",
-       "128        NaN  ...     Kulturgravar_only\n",
-       "129        NaN  ...     Kulturgravar_only\n",
-       "130        NaN  ...     Kulturgravar_only\n",
-       "131        NaN  ...     Kulturgravar_only\n",
+       "     qid personLabel  ...          kulturgravname Kulturgravar_Wikidata\n",
+       "127  NaN         NaN  ...              Henri Osti     Kulturgravar_only\n",
+       "128  NaN         NaN  ...         Herman Baumbach     Kulturgravar_only\n",
+       "129  NaN         NaN  ...  Johan Fredrik Carlsson     Kulturgravar_only\n",
        "\n",
-       "[8 rows x 6 columns]"
+       "[3 rows x 6 columns]"
       ]
      },
      "execution_count": 9,
@@ -585,12 +539,35 @@
    ],
    "source": [
     "KulturgravarNotBoth = dfmerge[~(dfmerge[\"Kulturgravar_Wikidata\"] == \"both\")].copy() \n",
-    "KulturgravarNotBoth  \n"
+    "KulturgravarNotBoth\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "127    NaN\n",
+       "128    NaN\n",
+       "129    NaN\n",
+       "Name: refURL, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KulturgravarNotBoth[\"refURL\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -607,18 +584,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 5 entries, 127 to 131\n",
+      "Int64Index: 3 entries, 127 to 129\n",
       "Data columns (total 6 columns):\n",
       " #   Column                 Non-Null Count  Dtype \n",
       "---  ------                 --------------  ----- \n",
       " 0   qid                    0 non-null      object\n",
       " 1   personLabel            0 non-null      object\n",
       " 2   refURL                 0 non-null      object\n",
-      " 3   href                   5 non-null      object\n",
-      " 4   kulturgravname         5 non-null      object\n",
-      " 5   Kulturgravar_Wikidata  5 non-null      object\n",
+      " 3   href                   3 non-null      object\n",
+      " 4   kulturgravname         3 non-null      object\n",
+      " 5   Kulturgravar_Wikidata  3 non-null      object\n",
       "dtypes: object(6)\n",
-      "memory usage: 280.0+ bytes\n"
+      "memory usage: 168.0+ bytes\n"
      ]
     }
    ],
@@ -628,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -664,38 +641,26 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Henrik Wilhelm Söderman</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/henrik-wilhelm-soderman</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>Herman Baumbach</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/herman-baumbach</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>Johan Fredrik Carlsson</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/johan-fredrik-carlsson</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Rune Hammarling</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/rune-hammarling</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            kulturgravname                                                                   url\n",
-       "0               Henri Osti               https://kulturpersoner.uppsalakyrkogardar.se/henri-osti\n",
-       "1  Henrik Wilhelm Söderman  https://kulturpersoner.uppsalakyrkogardar.se/henrik-wilhelm-soderman\n",
-       "2          Herman Baumbach          https://kulturpersoner.uppsalakyrkogardar.se/herman-baumbach\n",
-       "3   Johan Fredrik Carlsson   https://kulturpersoner.uppsalakyrkogardar.se/johan-fredrik-carlsson\n",
-       "4          Rune Hammarling          https://kulturpersoner.uppsalakyrkogardar.se/rune-hammarling"
+       "           kulturgravname                                                                  url\n",
+       "0              Henri Osti              https://kulturpersoner.uppsalakyrkogardar.se/henri-osti\n",
+       "1         Herman Baumbach         https://kulturpersoner.uppsalakyrkogardar.se/herman-baumbach\n",
+       "2  Johan Fredrik Carlsson  https://kulturpersoner.uppsalakyrkogardar.se/johan-fredrik-carlsson"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
