--- a/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
@@ -8,9 +8,9 @@
     "    version part 3 - 2.3\n",
     "  \n",
     "  * SKBL see https://skbl.se/en  \n",
-    "    * example JSON [GretaGarbo](https://skbl.se/en/article/GretaGarbo.json)\n",
+    "    * example structured data from SKBL [GretaGarbo JSON](https://skbl.se/en/article/GretaGarbo.json)\n",
     "  \n",
-    "  This notebook\n",
+    "  This [notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)\n",
     "  * gets statistics about SKBL and compare with The Swedish National archives SBL biographies [about SBL](https://sok.riksarkivet.se/sbl/Start.aspx?lang=en)\n",
     "  * check if SKBL has new articles created not in Wikidata\n",
     "\n",
