--- a/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
@@ -513,8 +513,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>heinrich-osti</td>\n",
-       "      <td>Heinrich Osti</td>\n",
+       "      <td>henri-osti</td>\n",
+       "      <td>Henri Osti</td>\n",
        "      <td>Kulturgravar_only</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -522,8 +522,8 @@
        "</div>"
       ],
       "text/plain": [
-       "    person  qid personLabel  ...           href kulturgravname Kulturgravar_Wikidata\n",
-       "128    NaN  NaN         NaN  ...  heinrich-osti  Heinrich Osti     Kulturgravar_only\n",
+       "    person  qid personLabel  ...        href kulturgravname Kulturgravar_Wikidata\n",
+       "128    NaN  NaN         NaN  ...  henri-osti     Henri Osti     Kulturgravar_only\n",
        "\n",
        "[1 rows x 7 columns]"
       ]
@@ -631,16 +631,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Heinrich Osti</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/heinrich-osti</td>\n",
+       "      <td>Henri Osti</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/henri-osti</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  kulturgravname                                                         url\n",
-       "0  Heinrich Osti  https://kulturpersoner.uppsalakyrkogardar.se/heinrich-osti"
+       "  kulturgravname                                                      url\n",
+       "0     Henri Osti  https://kulturpersoner.uppsalakyrkogardar.se/henri-osti"
       ]
      },
      "execution_count": 13,
